# dev-log-portfolio

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml
app/: main.py
app/templates/: about.html  base.html  index.html
src/: App.tsx
static/css/: input.css  output.css
