[project]
name = "dev-log-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.125.0",
    "htmx>=0.0.0",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.30",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
